@@ -1,3 +1,8 @@
+2006-09-05 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCopt.c (cnvToFcall): fixed bug 1551947 by updating OP_USES
+	  and OP_DEFS
+
 2006-09-05 Raphael Neider <rneider AT web.de>
 
 	* device/lib/pic16/libdev/pic18f4550.c,
